# iqbacli

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
iqbacli/: __main__.py
iqbacli/cli/: __init__.py  cache.py  config.py  search.py
iqbacli/cli/config/: __init__.py  get.py  path.py  reset.py
iqbacli/cli/history/: clear.py  get.py  list.py  undo.py
iqbacli/cli/result/: __init__.py  delete.py  get.py  list.py  show.py
iqbacli/data/: model.py  query.py  result.py  util.py
iqbacli/data/db/: database.sqlite3
iqbacli/data/sql/: init_query_table.sql  init_result_table.sql  initialize_tables.sql
iqbacli/params/: builtins.py
scripts/: run-mypy.sh
src/iqbacli/: __init__.py  __main__.py  logging.py  paths.py
src/iqbacli/cli/: __init__.py  search.py
src/iqbacli/cli/_typer/cache/: size.py
src/iqbacli/cli/_typer/config/: __init__.py  get.py  set.py
src/iqbacli/cli/_typer/history/: __init__.py  last.py
src/iqbacli/cli/_typer/result/: __init__.py  show.py
src/iqbacli/cli/cache/: __init__.py  clear.py  size.py
src/iqbacli/cli/config/: __init__.py  get.py  path.py  reset.py  set.py  set_file.py  util.py
src/iqbacli/cli/history/: __init__.py  clear.py  delete.py  get.py  last.py  list.py  undo.py
src/iqbacli/cli/printer/: __init__.py  json_printer.py  message.py  printer.py  quiet_printer.py  rich_printer.py
src/iqbacli/cli/result/: __init__.py  delete.py  get.py  last.py  list.py
src/iqbacli/cli/suggestions/: suggestion.py  suggestions.py
src/iqbacli/data/: __init__.py  config.py  datatypes.py  model.py  query.py  result.py  sql.py
src/iqbacli/data/sql/: initialize_tables.sql
src/iqbacli/driver/: __init__.py  config.py  filesystem.py
src/iqbacli/params/: builtins.py  env.py
tests/: test_logging.py  test_pytest.py
tests/data/: test_config.py  test_query.py  test_result.py  test_sql.py  util.py
tests/data/sql/: initialize_tables.sql  reset_db.sql  sample_query_data.sql  sample_result_data.sql  test_script.sql
