[metadata]
name = iqbacli
version = attr: iqbacli.__version__
author = Adil Iqbal
author_email = main@adil-iqbal.com
url = https://github.com/Adil-Iqbal/iqbacli
description = Command line tool for searching file contents.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, keyword, file, file type, extension, ext, docx, pdf, txt, cli
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires =
    python-dotenv
    typer
zip_safe = True
include_package_data = True

[options.package_data]
example = *.json, *.sql
* = README.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    iqba = iqbacli:main