[metadata]
name = iqbacli
version = attr: iqbacli.__version__
author = Adil Iqbal
author_email = main@adil-iqbal.com
url = https://github.com/Adil-Iqbal/iqbacli
description = Command line tool for searching file contents.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, keyword, file, file type, extension, ext, docx, pdf, txt, cli
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires =
    typer==0.7.0
    python-dotenv==0.21.0
    platformdirs==2.6.2
    pyhumps==3.8.0
python_requires = >=3.9
zip_safe = True
include_package_data = True

[options.extras_require]
testing =
    black==22.12.0
    flake8==6.0.0
    mypy==0.991
    tox==4.0.16
    pytest==7.2.0
    pytest-cov==4.0.0
    isort==5.12.0
    pyupgrade==3.3.1
    pre-commit==3.2.2


[options.package_data]
iqbacli = py.typed
example = **/*.sql
* = README.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    iqba = iqbacli.__main__:main

[flake8]
max-line-length = 88
extend-ignore =
    E203,